--- a/gallery.html
+++ b/gallery.html
@@ -33,14 +33,14 @@
   <section class="project-gallery">
     <h2>Gallery</h2>
     <a href="Images/shed.jpg" data-lightbox="project-gallery" data-title="New 18' x 15' shed with concrete foundation and deck">
-      <img src="Images/shed.jpg" alt="Shed view" />
-    </a>
-    <p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
-    
-    <a href="Images/shed2.jpg" data-lightbox="project-gallery" data-title="Side view of the shed">
-      <img src="Images/shed2.jpg" alt="Side view of the shed" />
-    </a>
-    <p>Left side view of the same shed project</p>
+  <img src="Images/shed.jpg" alt="Shed view" style="width: 200px; margin: 10px;" />
+</a>
+<p>New 18' x 15' x 7'6" shed with an 18’ x 18’ x 18” concrete foundation and a 20’ x 25’ x 6” concrete deck</p>
+
+<a href="Images/shed2.jpg" data-lightbox="project-gallery" data-title="Side view of the shed">
+  <img src="Images/shed2.jpg" alt="Side view of the shed" style="width: 200px; margin: 10px;" />
+</a>
+<p>Left side view of the same shed project</p>
     
     <a href="Images/1.jpg" data-lightbox="project-gallery" data-title="Test Image 1">
     <img src="Images/1.jpg" alt="Test Image 1" style="width: 200px; margin: 10px;" />
