--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
     <img src="Images/1.jpg" alt="Test Image 1" style="width: 200px; margin: 10px;" />
     </a>
     
-    <a href="Images/2.jpg" data-fancybox="project-gallery" data-caption="Test Image 2">
+    <a href="Images/2.jpg" data-fancybox="gallery" data-caption="Test Image 2">
     <img src="Images/2.jpg" alt="Test Image 2" style="width: 200px; margin: 10px;" />
     </a>
     
