--- a/test-fancybox.html
+++ b/test-fancybox.html
@@ -12,5 +12,7 @@
   </a>
 
   <script src="fancybox/fancybox.umd.js"></script>
+  Fancybox.bind("[data-fancybox]", {});
+</script>
 </body>
 </html>
