--- a/test-fancybox.html
+++ b/test-fancybox.html
@@ -12,7 +12,8 @@
   </a>
 
   <script src="fancybox/fancybox.umd.js"></script>
-  Fancybox.bind("[data-fancybox]", {});
-</script>
+  <script>
+    Fancybox.bind("[data-fancybox]", {});
+  </script>
 </body>
 </html>
