--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ELI MAS Construction Inc | NYC Contractor</title>
   <meta name="description" content="Licensed & insured NYC contractor offering home improvement services in all 5 boroughs. Call now for a free estimate!">
+  <link href="lightbox.min.css" rel="stylesheet" />
+  <script src="lightbox.min.js"></script>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
