--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <title>Gallery | ELI MAS Construction Inc</title>
   <meta name="description" content="View photos of past ELI MAS Construction projects including sheds, concrete work, and masonry jobs in NYC.">
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="fancybox/fancybox.css" />
+  <link rel="stylesheet" href="lightbox/lightbox.css" />
 </head>
 <body>
   <header>
@@ -60,7 +60,7 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="fancybox/fancybox.umd.js"></script>
+  <script src="lightbox/lightbox.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
