--- a/gallery.html
+++ b/gallery.html
@@ -46,11 +46,11 @@
     <img src="Images/1.jpg" alt="Test Image 1" style="width: 200px; margin: 10px;" />
     </a>
     
-    <a href="Images/2.jpg" data-lightbox="gallery" data-title="Test Image 2">
+    <a href="Images/2.jpg" data-lightbox="project-gallery" data-title="Test Image 2">
     <img src="Images/2.jpg" alt="Test Image 2" style="width: 200px; margin: 10px;" />
     </a>
     
-    <a href="Images/3.jpg" data-lightbox="project-gallery" data-title="Test Image 3">
+    <a href="Images/3.jpg" data-lightbox="project-project-gallery" data-title="Test Image 3">
     <img src="Images/3.jpg" alt="Test Image 3" style="width: 200px; margin: 10px;" />
     </a>
   </section>
