--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>ELI MAS Construction Inc | NYC Contractor</title>
   <meta name="description" content="Licensed & insured NYC contractor offering home improvement services in all 5 boroughs. Call now for a free estimate!">
    <link rel="stylesheet" href="css/style.css" />
-   <link href="lightbox.min.css" rel="stylesheet" />
-  <script src="lightbox.min.js"></script>
-</head>
+   <link href="lightbox.css" rel="stylesheet" />
+  </head>
 <body>
   <header>
     <h1>ELI MAS CONSTRUCTION INC</h1>
