--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ELI MAS Construction Inc | NYC Contractor</title>
   <meta name="description" content="Licensed & insured NYC contractor offering home improvement services in all 5 boroughs. Call now for a free estimate!">
-   <link rel="stylesheet" href="css/style.css" />
+   <link rel="stylesheet" href="lightbox/css/lightbox.css" />
    <link href="lightbox.css" rel="stylesheet" />
   </head>
 <body>
