--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
-
-  <script src="js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="lightbox/js/lightbox.min.js"></script>
 </body>
 </html>
