--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,8 @@
   <title>Gallery | ELI MAS Construction Inc</title>
   <meta name="description" content="View photos of past ELI MAS Construction projects including sheds, concrete work, and masonry jobs in NYC.">
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="lightbox/lightbox.css" />
+  <link rel="stylesheet" href="lightbox/css/lightbox.css" />
+
 </head>
 <body>
   <header>
@@ -50,7 +51,7 @@
     <img src="Images/2.jpg" alt="Test Image 2" style="width: 200px; margin: 10px;" />
     </a>
     
-    <a href="Images/3.jpg" data-lightbox="project-project-gallery" data-title="Test Image 3">
+    <a href="Images/3.jpg" data-lightbox="project-gallery" data-title="Test Image 3">
     <img src="Images/3.jpg" alt="Test Image 3" style="width: 200px; margin: 10px;" />
     </a>
   </section>
