--- a/index.html
+++ b/index.html
@@ -49,5 +49,25 @@
   </footer>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="lightbox/js/lightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var lightboxOverlay = document.querySelector('.lightboxOverlay');
+    if (!lightboxOverlay) return;
+
+    var hammer = new Hammer(lightboxOverlay);
+
+    hammer.on('swipeleft', function () {
+      var nextButton = document.querySelector('.lb-next');
+      if (nextButton) nextButton.click();
+    });
+
+    hammer.on('swiperight', function () {
+      var prevButton = document.querySelector('.lb-prev');
+      if (prevButton) prevButton.click();
+    });
+  });
+</script>
+
 </body>
 </html>
