--- a/index.html
+++ b/index.html
@@ -53,33 +53,31 @@
 <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
-    // Only apply on mobile
-    if (window.innerWidth > 767) return;
+    if (window.innerWidth > 767) return; // Only on mobile
 
-    // Listen for when the lightbox is opened
-    document.addEventListener('click', function (e) {
-      if (e.target.matches('[data-lightbox]')) {
-        setTimeout(() => {
-          var lightboxOverlay = document.querySelector('.lightboxOverlay');
-          if (!lightboxOverlay) return;
+    const observer = new MutationObserver(() => {
+      const overlay = document.querySelector('.lightboxOverlay');
+      if (!overlay || overlay.getAttribute('data-swipe-bound')) return;
 
-          var hammer = new Hammer(lightboxOverlay);
+      overlay.setAttribute('data-swipe-bound', 'true');
+      const hammer = new Hammer(overlay);
 
-          hammer.on('swipeleft', function () {
-            var nextButton = document.querySelector('.lb-next');
-            if (nextButton) nextButton.click();
-          });
+      hammer.on('swipeleft', function () {
+        const nextBtn = document.querySelector('.lb-next');
+        if (nextBtn) nextBtn.click();
+      });
 
-          hammer.on('swiperight', function () {
-            var prevButton = document.querySelector('.lb-prev');
-            if (prevButton) prevButton.click();
-          });
-        }, 100); // slight delay to allow overlay to render
-      }
+      hammer.on('swiperight', function () {
+        const prevBtn = document.querySelector('.lb-prev');
+        if (prevBtn) prevBtn.click();
+      });
+    });
+
+    observer.observe(document.body, {
+      childList: true,
+      subtree: true,
     });
   });
-</script>
-
 </script>
 
 </body>
