Update contact page, cleanup hamburger menu

--- a/about.html
+++ b/about.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | ELI MAS Construction Inc</title>
-  <meta name="description" content="Learn about ELI MAS Construction Inc — a trusted NYC contractor providing reliable home improvement services since 2005.">
+  <title>About Us | ELI MAS Construction Inc – NYC Licensed & Insured Contractor</title>
+  <meta name="description" content="Learn more about ELI MAS Construction Inc — a trusted, licensed, and insured NYC contractor with decades of   experience in home improvement and construction projects throughout all five boroughs.">
+  services since 2005.">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
