--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | ELI MAS Construction Inc</title>
+  <title>Contact Us | ELI MAS Construction Inc – NYC Licensed Contractor</title>
+  <meta name="description" content="Contact ELI MAS Construction Inc — a licensed and insured NYC contractor serving all 5 boroughs. Call 914-755-6641 or visit us at 1204 Boynton Ave, Bronx, NY to request your free estimate.">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -11,13 +12,8 @@
     <h1>ELI MAS CONSTRUCTION INC</h1>
     <p>Licensed & Insured NYC Home Improvement Contractor</p>
     <p>¡Hablamos Español!</p>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+    
   </header>
-
   <nav>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
@@ -29,26 +25,16 @@
   </nav>
 
   <section>
-    <h2>Contact ELI MAS CONSTRUCTION INC</h2>
-    <p><strong>Owner:</strong> Eliseo Camas Agualema</p>
-    <p><strong>Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
-    <p><strong>Address:</strong> 1204 Boynton Ave., Bronx, NY 10472</p>
-    <p><strong>License #:</strong> 2083303-DCA (NYC)</p>
+  <h2>Contact ELI MAS CONSTRUCTION INC</h2>
+  <p><strong>Owner:</strong> Eliseo Camas Agualema</p>
+  <p><strong>Phone:</strong> <a href="tel:9147556641">914-755-6641</a> — Call today for your free estimate!</p>
+  <p><strong>Address:</strong> 1204 Boynton Ave., Bronx, NY 10472</p>
+  <p><strong>License #:</strong> 2083303-DCA (NYC)</p>
   </section>
 
-  <section>
-    <h2>Request a Free Estimate</h2>
-    <p>Call <a href="tel:9147556641">914-755-6641</a> today!</p>
-  </section>
-
-  <footer>
+    <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById("navLinks").classList.toggle("active");
-    }
-  </script>
-</body>
-</html>
+  </body>
+  </html>
