--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ELI MAS Construction Inc | NYC Contractor</title>
-  <meta name="description" content="Licensed & insured NYC contractor offering home improvement services in all 5 boroughs. Call now for a free estimate!">
-   <link rel="stylesheet" href="css/style.css" />
+  <title>ELI MAS Construction Inc | Licensed NYC Home Improvement Contractor</title>
+  <meta name="description" content="ELI MAS Construction Inc is a licensed and insured NYC contractor specializing in residential, commercial,   and public projects across the Bronx, Brooklyn, Manhattan, Queens, and Staten Island. Call now for a free estimate.">
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="lightbox/css/lightbox.css" />
 </head>
 <body>
+
   <header>
     <h1>ELI MAS CONSTRUCTION INC</h1>
     <p>Licensed & Insured NYC Home Improvement Contractor</p>
     <p>¡Hablamos Español!</p>
+
     <div class="hamburger" onclick="toggleMenu()">
       <div></div>
       <div></div>
@@ -30,26 +32,28 @@
     </ul>
   </nav>
 
-  <section>
-    <h2>Serving the Bronx, Brooklyn, Manhattan, Queens & Staten Island</h2>
-    <ul>
-      <li>Residential, Commercial, and Public Projects</li>
-    </ul>
-  </section>
+  <main>
+    <section>
+      <h2>Serving the Bronx, Brooklyn, Manhattan, Queens & Staten Island</h2>
+      <ul>
+        <li>Residential, Commercial, and Public Projects</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>To Get Your Free Estimate</h2>
-    <p style="font-size: 1.2em; font-weight: bold;">
-      Call <a href="tel:9147556641">914-755-6641</a> today!
-    </p>
-  </section>
+    <section>
+      <h2>To Get Your Free Estimate</h2>
+      <p class="call-now">
+        Call <a href="tel:9147556641">914-755-6641</a> today!
+      </p>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="lightbox/js/lightbox.min.js"></script>
-</script>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="lightbox/js/lightbox.min.js"></script>
 
 </body>
 </html>
