--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -6,6 +6,12 @@
   <title>Our Services | ELI MAS Construction Inc</title>
   <meta name="description" content="Explore the full list of services offered by ELI MAS Construction Inc — concrete, masonry, remodeling, roofing, and more.">
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    /* Enable smooth scrolling for anchor links */
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -30,18 +36,29 @@
   </nav>
 
   <section>
-    <h2>Our Services</h2>
+    <h2>Our Work Areas</h2>
     <ul>
-      <li>Concrete & Masonry</li>
-      <li>Pavers & Stones</li>
-      <li>Kitchen Remodeling</li>
-      <li>Bathroom Renovation</li>
-      <li>Tiling & Flooring</li>
-      <li>Drywall & Painting</li>
-      <li>Roofing</li>
-      <li>Siding</li>
-      <li>Fences</li>
-      <li>Sheds</li>
+      <li><a href="#exterior-jobs">Exterior</a></li>
+      <li>Interior</li>
+      <li>Renovations</li>
+      <li>New Construction</li>
+      <li>Residential</li>
+      <li>Commercial</li>
+    </ul>
+  </section>
+
+  <section id="exterior-jobs">
+    <h3>Exterior Work</h3>
+    <ul>
+      <li>Sidewalks</li>
+      <li>Driveways</li>
+      <li>Pavers</li>
+      <li>Stucco</li>
+      <li>Masonry</li>
+      <li>Concrete Work</li>
+      <li>Retaining Walls</li>
+      <li>Exterior Steps</li>
+      <li>Foundation Repair</li>
     </ul>
   </section>
 
