--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     <h1>ELI MAS CONSTRUCTION INC</h1>
     <p>Licensed & Insured NYC Home Improvement Contractor</p>
     <p>¡Hablamos Español!</p>
-    
   </header>
+
   <nav>
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
@@ -24,17 +24,35 @@
     </ul>
   </nav>
 
-  <section>
-  <h2>Contact ELI MAS CONSTRUCTION INC</h2>
-  <p><strong>Owner:</strong> Eliseo Camas Agualema</p>
-  <p><strong>Phone:</strong> <a href="tel:9147556641">914-755-6641</a> — Call today for your free estimate!</p>
-  <p><strong>Address:</strong> 1204 Boynton Ave., Bronx, NY 10472</p>
-  <p><strong>License #:</strong> 2083303-DCA (NYC)</p>
-  </section>
+  <main>
+    <section>
+  <table>
+    <tr><th colspan="2">Business Hours</th></tr>
+    <tr><td>Monday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Tuesday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Wednesday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Thursday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Friday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Saturday:</td><td>8 AM to 5 PM</td></tr>
+    <tr><td>Sunday:</td><td>Closed</td></tr>
+  </table>
 
-    <footer>
+
+      <h2>Contact Info</h2>
+      <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
+
+  <p><strong>📍 Address:</strong>
+    <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">
+      1204 Boynton Ave., Bronx, NY 10472
+    </a>
+  </p>
+
+  <p><strong>🔖 License #:</strong> 2083303-DCA (NYC)</p>
+</section>
+  </main>
+
+  <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
-
-  </body>
-  </html>
+</body>
+</html>
