--- a/services.html
+++ b/services.html
@@ -32,18 +32,17 @@
   <section>
     <h2>Our Services</h2>
     <ul>
-      <li>Concrete & Masonry</li>
-      <li>Pavers & Stones</li>
-      <li>Kitchen Remodeling</li>
-      <li>Bathroom Renovation</li>
-      <li>Tiling & Flooring</li>
-      <li>Drywall & Painting</li>
-      <li>Roofing</li>
-      <li>Siding</li>
-      <li>Fences</li>
-      <li>Sheds</li>
+      <li><a href="Exterior.html">Exterior</a></li>
+      <li><a href="Fence.html">Fence</a></li>
+      <li><a href="Interior.html">Interior</a></li>
+      <li><a href="Roofing.html">Roofing</a></li>
+      <li><a href="Sheds.html">Sheds</a></li>
     </ul>
   </section>
+
+<section class="compliance-note">
+  <p><strong>Note:</strong> All services provided by ELI MAS Construction Inc. are performed in full compliance with applicable NYC laws, codes, and regulations. Where required, we coordinate with licensed professionals and obtain all necessary permits to ensure every project meets legal and safety standards.</p>
+</section>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
