--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
     </a>
   </p>
 
-  <p><strong>🔖 License #:</strong> 2083303-DCA (NYC)</p>
+<p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
+<p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
 </section>
-  </main>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
