--- a/Sheds.html
+++ b/Sheds.html
@@ -45,6 +45,7 @@
   <p><strong>Custom Shelving:</strong> Maximize storage with built-in or wall-mounted shelves designed for efficiency and access.</p>
 </section>
 
+<p><a href="services.html" class="button">← Back to Services</a></p>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
