--- a/contact.html
+++ b/contact.html
@@ -14,16 +14,7 @@
     <p>¡Hablamos Español!</p>
   </header>
 
-  <nav>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-    </ul>
-  </nav>
-
+  
   <main>
     <section>
   <table>
@@ -50,6 +41,8 @@
 <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
 <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
 </section>
+
+<p><a href="index.html" class="button">← Back to Home</a></p>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
