--- a/gallery.html
+++ b/gallery.html
@@ -21,16 +21,7 @@
     </div>
   </header>
 
-  <nav>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html" class="active">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
+  
   <section class="project-gallery">
     <h2>Gallery</h2>
     <a href="Images/shed.jpg" data-lightbox="project-gallery" data-title="New 18' x 15' shed with concrete foundation and deck">
@@ -58,7 +49,11 @@
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-  </footer>
+  
+<p><a href="index.html" class="button">← Back to Home</a></p>
+
+
+</footer>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="lightbox/js/lightbox.min.js"></script>
