--- a/Roofing.html
+++ b/Roofing.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exterior Work | ELI MAS Construction Inc</title>
-  <meta name="description" content="Exterior work by ELI MAS Construction Inc including sidewalk repair and more.">
+  <title>Roofing Services | ELI MAS Construction Inc</title>
+  <meta name="description" content="Roofing services by ELI MAS Construction Inc including installation, repairs, and coatings.">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -25,21 +25,20 @@
   </nav>
 
   <section>
-    section>
-  <h2>Roofing Services</h2>
+    <h2>Roofing Services</h2>
 
-  <p><strong>Roof Installation:</strong> Complete roof replacements and new installations using asphalt shingles, flat roofing systems, and more.</p>
+    <p><strong>Roof Installation:</strong> Complete roof replacements and new installations using asphalt shingles, flat roofing systems, and more.</p>
 
-  <p><strong>Roof Repair:</strong> Leak detection and repair, shingle replacement, and flashing fixes to keep your home protected.</p>
+    <p><strong>Roof Repair:</strong> Leak detection and repair, shingle replacement, and flashing fixes to keep your home protected.</p>
 
-  <p><strong>Flat Roof Work:</strong> Expert solutions for flat roof installation and repairs using rubber, TPO, or modified bitumen systems.</p>
+    <p><strong>Flat Roof Work:</strong> Expert solutions for flat roof installation and repairs using rubber, TPO, or modified bitumen systems.</p>
 
-  <p><strong>Roof Coating:</strong> Application of protective coatings to extend the life of your roof and improve energy efficiency.</p>
+    <p><strong>Roof Coating:</strong> Application of protective coatings to extend the life of your roof and improve energy efficiency.</p>
 
-  <p><strong>Gutter Installation & Repair:</strong> Ensure proper water drainage with professional gutter setup and maintenance.</p>
-</section>
-
+    <p><strong>Gutter Installation & Repair:</strong> Ensure proper water drainage with professional gutter setup and maintenance.</p>
   </section>
+
+  <p><a href="services.html" class="button">← Back to Services</a></p>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
