--- a/about.html
+++ b/about.html
@@ -20,23 +20,15 @@
     </div>
   </header>
 
-  <nav>
-    <ul class="nav-links" id="navLinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html" class="active">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <section>
+    <section>
     <h2>About Us</h2>
     <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who started his journey in the trades as a young man. Originally established in 2005 as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
     <p>Built on a foundation of hard work, skill, and reliability, our mission is to deliver high-quality home improvement services with honesty and care.</p>
     <p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations tailored to our clients' needs.</p>
     <p>Proudly serving residential, commercial, and public clients across all five boroughs of New York City.</p>
   </section>
+
+<p><a href="index.html" class="button">← Back to Home</a></p>
 
   <footer>
     <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
